tests/NormalTests/paczka1/fuzzy1/84111154.err
Error in line 9: Tbk71kP7iu A974 85,5
Error in line 13: sX5 S732 12,4
Error in line 11: Tbk71kP7iu S732 284,9
Error in line 10: WKxHJb A974 33,4
Error in line 28: WKxHJb A35 2,89
Error in line 29: WKxHJb A974 68,62
Error in line 19: WKxHJb A35 97,1
Error in line 35: XsYQCHI S352 36,2
Error in line 37: sX5 A35 187,9
